# base_ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  startup.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy-aas-free.yml
PDF-Tools-main/: CLAUDE.md  README.md  pyproject.toml
PDF-Tools-main/app/: database.py  main.py
PDF-Tools-main/app/api/: split.py
PDF-Tools-main/app/repositories/: preset_repository.py
PDF-Tools-main/app/schemas/: merge.py  split.py
PDF-Tools-main/app/services/: upload_service.py
PDF-Tools-main/app/static/css/: style.css
PDF-Tools-main/app/storage/: factory.py  local_storage.py
PDF-Tools-main/app/utils/: exceptions.py
PDF-Tools-main/tests/: test_merge_service.py  test_pdf_utils.py
app/: main.py
app/api/: merge.py  presets.py
app/models/: preset.py
app/schemas/: preset.py
app/services/: merge_service.py  split_service.py
app/static/js/: app.js
app/storage/: azure_storage.py  base.py
app/templates/: index.html
app/utils/: file_utils.py  filename_utils.py  pdf_utils.py
tests/: test_filename_utils.py  test_split_service.py
