[project]
name = "ai-dev-template"
version = "0.1.0"
description = "Claude Code + GitHub Codespaces + Azure App Service テンプレート"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.0",
]

[tool.uv]
python-downloads = "automatic"
